[package]
name = "usb_measure"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3"] }

ti-ina219 = { git="https://github.com/gpgreen/ti-ina219" }

[patch.crates-io]
hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp32c3-hal"}
esp-hal-common = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal-common"}
